--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
               <td>Minas: <span id="info-minas"></span></td>
               <td><button onclick="construye()">Construir</button></td>            
             </tr>
+            <tr>
+              <td>LAG <span class="smaller">(1-2000 ms)</span></td>
+              <td><input id="input-lag" type="number" value="25" /></td>            
+            </tr>
             <tr>            
               <td><button id="boton-probar" disabled="true" onclick="probar()">Probar</button></td>
               <td><button id="boton-iniciar" disabled="true" onclick="iniciar()" class="td-ancho">Auto-Juego</button></td>
