--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <tr>
               <td>Tamaño</td>
               <td> 
-                <input id="input-tamano" type="number" />
+                <input id="input-tamano" type="number" value="20" />
               </td>
             </tr>
             <tr>
@@ -29,19 +29,19 @@
             </tr>
             <tr>
               <td>LAG <span class="smaller">(1-2000 ms)</span></td>
-              <td><input id="input-lag" type="number" value="25" /></td>            
+              <td><input id="input-lag" type="number" value="75" /></td>            
             </tr>
             <tr>            
               <td><button id="boton-probar" disabled="true" onclick="probar()">Probar</button></td>
               <td><button id="boton-iniciar" disabled="true" onclick="iniciar()" class="td-ancho">Auto-Juego</button></td>
             </tr>
             <tr>
-              <td colSpan="2" id="state" class="smaller">Elige tamaño (3-20) y clic en "Construir"</td>
+              <td colSpan="2" id="state" class="smaller">Elige tamaño (3-30) y clic en "Construir"</td>
             </tr>
             <tr>
               <td class="smaller" colSpan="2" >
                 <span class="bold">VER 1.1.0</span><br> NOTAS:<br>
-                ► El algoritmo es ...<br>
+                ► El algoritmo es equivalente a Principiante + celda 1+1<br>
                 ► Coloca minas al azar al "Contstruir" un tablero nuevo, para evitar tener que colocar las minas a mano                
               </td>
             </tr>
