--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <table class='tabla-parametros tabla-parametros-tabla'>
           <tbody>
             <tr>
-              <td>Tamaño</td>
+              <td>Tamaño <span class="smaller">(3-30)</span></td>
               <td> 
                 <input id="input-tamano" type="number" value="20" />
               </td>
@@ -42,7 +42,9 @@
               <td class="smaller" colSpan="2" >
                 <span class="bold">VER 1.1.0</span><br> NOTAS:<br>
                 ► El algoritmo es equivalente a Principiante + celda 1+1<br>
-                ► Coloca minas al azar al "Contstruir" un tablero nuevo, para evitar tener que colocar las minas a mano                
+                ► Coloca minas al azar al "Contstruir" un tablero nuevo, para evitar tener que colocar las minas a mano<br>
+                ► Coloca "x" si se puso bandera en lugar equivocado<br>
+                ► Deja las banderas al ganar el juego (en lugar de mostrar las minas)
               </td>
             </tr>
           </tbody>
