--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         </table>
       </div>
       <!-- Table -->
-      <div id="tableroDiv" class='tabla'>        
+      <div class='tabla-div'>
         <table id="table"></table>
+        <img id="img-status" src="./img/status-normal.png" alt="img-status">
         <div id="pc-status" class="smaller pc-thinking">&nbsp;</div>
       </div>
 
